# programming_practice

./: README.md
ai/: readme.txt
ai/nlp/: parsing.py  replacers.py
ai/tensorFlow/: mnist.py
ai_lab/: readme.txt
ai_lab/nlp/: normal.py  similarity.py  sub.py
ai_lab/tensorFlow/: intro.py
c/: exericse
c/LCTHW/: Makefile  ex1.c  ex10  ex10.c  ex12.c  ex13.c  ex14  ex15  ex16  ex17.c  ex3  ex3.c  ex6  ex6.c  ex7.c  ex8  ex9.c
c/zfczj/ch02/: CMakeLists.txt  auto  auto.c  book_data.c  free.c  int2str  intToStr.c  malloc_test.c  print_address  quick_sort.c  tiny_printf.c
cpp/: CPP_Notes.txt  test
cpp/GCC_4_7_0/: broken  broken.cpp
cpp/TCPPPL/: exceptions.cpp  io.cpp  overload.cpp  shape.cpp
cpp/ds_algo_in_cpp/: a.out  tictactoe.cpp
css-study/delighterjs-demo/: index.html
css-study/landing-page/: index.html
css-study/six-handy-css3-animation/: index.html
deep-learning-with-python/: mnist-example.py
javascript/: equal.js  experiments.js
languages/c/: cmath.h  exercise.c
languages/cpp/: test.cpp
languages/python/: asyncio.py  geventTest.py  io.py  mydict.py  mydict_test.py  primer.py  sort.py  stringIO.py  test.txt  thread.py
ml/tensorFlow/: .intro.py.swp
nlp/: tn.py  wordfreq.py  zipf.py
os/linux/: forkToDo.pem
python/: lambda.py  map.py  sort.py
python/Misc/: AdvFunc.py  BuildGUI.py  ClassEx.py  DirTree.py  DyType.py  Express.py  FetchUrlPic.py  FuncBasic.py  Iter.py  ListDict.py  Modules.py  Pandas_Notes.txt  test.db  (+7 more)
ruby/: add_and_power.rb
scala/: package_test.scala
tf-study/: package.json
web/: elements.html  promise.html
(+1086 files in other folders)
